Add render config and swagger docs
